# Grafika-Sepuluh-November

./: Bom.cpp  Bom.h  CMakeLists.txt  Nama Kelompok D Grafkom D  Pesawat.cpp  Pesawat.h  README.md  main.cpp
